# LaserDB

./: .bazelrc  .gitignore  01a85c17.aabb7203.js  02d737f1.1b696cbd.js  128b3156.bda5a92e.js  17896441.ecfe68c8.js  1fe53cd8.750fdfa2.js  3.e811304b.js  3aeedc5d.57b02697.js  3ca96358.e8ffce2d.js  3d8d21df.055cb36f.js  3eb9ff2c.ded051e7.js  41.b928ff69.js  42.ca06bce3.js  6875c492.70e1996a.js  7bef795b.4d513b06.js  8d8df188.ebb4e203.js  BUILD  README.md  WORKSPACE  a6aa9e1f.95831eb1.js  bc2362e4.292ff19a.js  c18a7787.53f07a30.js  ccc49370.2bd2b5d5.js  d589d3a7.7554fa74.js  df361e2b.9fac40d1.js  fe6cf836.9d8c26a0.js  install-bazel.sh  main.828f69f5.js  sitemap.xml  styles.7eaef54d.js
.github/workflows/: build.yml  docs.yaml  docs.yml  main.yml
blog/laserdb-in-weibo/: index.html
client/: BUILD  laser_client.cc  laser_client.h  options.cc  options.h
common/: BUILD  util.cc  util.h  version.h.m4
common/console/: table.cc  table.h  termcolor.h
common/consul/: agent_client.cc  agent_client.h  entity.cc  entity.h  kv_client.cc  kv_client.h  params.h  raw_client.h
common/hdfs/: hdfs.cc  hdfs.h  hdfs_monitor_test.cc  hdfs_test.cpp  hdfsmonitor.cc  hdfsmonitor.h  http_client.cc  http_client.h
common/http/: http_client_manager.cc  http_client_manager.h  http_connection.cc  http_connection.h  http_response.h  http_server_manager.cc  http_server_manager.h
common/laser/: config_manager.cc  config_manager.h  format.cc  format.h  generate_sst.cc  generate_sst.h  laser_entity.cc  laser_entity.h  loader_source_data.cc  loader_source_data.h  partition.cc  partition.h  rocksdb_config_factory.cc  rocksdb_config_factory.h  status.cc  status.h  versioned_options.h
common/metrics/: metrics.cc  metrics.h  system_metrics.cc  system_metrics.h  transform.cc  transform.h
common/service_router/: connection_pool.cc  connection_pool.h  http.cc  http.h  load_balance.cc  load_balance.h  registry.cc  registry.h  router.cc  router.h  service_info_puller.cc  service_info_puller.h  service_manager.cc  service_router_entity.cc  service_router_entity.h  thrift.h  thrift_client.cc  thrift_client.h  thrift_server.cc  thrift_server.h
control/: BUILD  README.md  build.sh  external_mod.bzl  go.mod  go.sum  main.go
control/apis/: BUILD.bazel  ansible_config.go  base.go  cluster.go  cluster_running_metrics.go  config_validator.go  database.go  dc.go  group.go  group_running_metrics.go  keycheck.go  machine.go  machine_category.go  node.go  node_config.go  node_physical_metrics.go  node_running_metrics.go  proxy_table_config.go  resource_pool_running_metrics.go  router.go  service.go  system_index.go  table.go  table_config.go  table_metrics.go  ticket.go  tools.go  user.go  version_change.go
control/batch_update_manager/: BUILD  pom.xml
control/cmd/: BUILD.bazel  root.go  server.go  version.go
control/common/: BUILD.bazel  errors.go  send_mail.go  timer.go  validator.go
control/common/curl/: BUILD.bazel  request.go  request_test.go
control/config/: config.yml
control/context/: BUILD.bazel  config.go  context.go
control/deploy/: ansible.cfg  ansible_install_agent.sh  hosts  laser_batch_update_manager_demo.yml  laser_demo_control.yml
control/docs/: BUILD.bazel
control/frontend/: .env.development  .gitignore  BUILD  element-variables.scss  package-lock.json  package.json  vue.config.js
control/logger/: BUILD.bazel  logger.go
control/middlerware/: BUILD.bazel  auth.go  cors.go
control/params/: BUILD.bazel  params.go
control/service/: BUILD.bazel  ansible_config.go  ansible_operation_manager.go  base.go  cluster.go  cluster_running_metrics.go  config_validator.go  consul.go  database.go  dc.go  group.go  group_running_metrics.go  keycheck.go  machine.go  machine_category.go  metrics_info.go  node_config.go  node_manager.go  node_physical_metrics.go  node_running_metrics.go  proxy_table_config.go  reduce_metrics.go  report_data_collector.go  resource_pool_running_metrics.go  service_manager.go  shard_control_actors.go  shard_manager.go  shard_status.go  system_index.go  table.go  table_config.go  table_metrics.go  table_shard_assigner.go  ticket.go  user.go
control/templates/: email-to-creator.html  email-to-handler.html
demo/: BUILD
docker/: docker-compose.yml
docker/grafana/: laser_server.json
docker/mysql/: laser.sql
docker/prometheus/: prometheus.yml
docs/: 01a85c17.bae97829.js  01a85c17.d99a65d1.js  02d737f1.5ef5f5bb.js  02d737f1.80578c5c.js  02d737f1.cf93ccbf.js  02d737f1.ec90159a.js  0a6accc3.258da1e8.js  1.39450f4e.js  1.645dda13.js  1.69c7d870.js  1.bfca449d.js  133a164f.18236db6.js  133a164f.19f68ceb.js  133a164f.29e78a9c.js  133a164f.53249ef5.js  17896441.54e2eade.js  17896441.9079603d.js  17896441.98d4f75d.js  17896441.c3acda63.js  1fe53cd8.9f8dc93c.js  2.5f5b4374.js  2.61f70580.js  2.80131b89.js  2.a567619c.js  2.cf861ff0.js  27d35159.2371cf99.js  27d35159.36552b9b.js  27d35159.7c7f883f.js  27d35159.e4d3ebfc.js  2ace4267.547d74cc.js  2ace4267.8b75ed9a.js  2ace4267.aacdcd4c.js  2ace4267.cff6eb7f.js  3.0b46032e.js  3.8f3b82d0.js  3.9b45b246.js  3.e69541b0.js  38.4d317906.js  39.9cd221fb.js  3aeedc5d.00027ba8.js  (+129 more)
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.js  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/blog/: 2020-11-24-laserdb-in-weibo.md  index.html
docs/cluster-deploy/: index.html
docs/docs/: about.md  cluster-config.md  cluster-deploy.md  (+11 more)
example/: BUILD  laser_client_test.cc  laser_file_test.cc  laser_key_test.cc
proxy/: BUILD  laser_proxy.cc  laser_proxy_service.cc  laser_proxy_service.h  proxy_config.cc  proxy_config.h  redis.cc  redis.h  redis_command_process.cc  redis_command_process.h
server/: BUILD  database_manager.cc  database_manager.h  database_meta_info.cc  database_meta_info.h  datapath_manager.cc  datapath_manager.h  http_service.cc  http_service.h  laser.cc  laser_service.cc  laser_service.h  partition_handler.cc  partition_handler.h  table_monitor.cc  table_monitor.h
tools/: README  load_config.py  requirements.txt
transform/: BUILD  laser.properties
(+300 files in other folders)
