load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "apis",
    srcs = [
        "ansible_config.go",
        "base.go",
        "cluster.go",
        "cluster_running_metrics.go",
        "config_validator.go",
        "database.go",
        "dc.go",
        "group.go",
        "group_running_metrics.go",
        "keycheck.go",
        "machine.go",
        "machine_category.go",
        "node.go",
        "node_config.go",
        "node_physical_metrics.go",
        "node_running_metrics.go",
        "proxy_table_config.go",
        "resource_pool_running_metrics.go",
        "router.go",
        "service.go",
        "system_index.go",
        "table.go",
        "table_config.go",
        "table_metrics.go",
        "ticket.go",
        "tools.go",
        "user.go",
        "version_change.go",
    ],
    importpath = "laser-control/apis",
    visibility = ["//visibility:public"],
    deps = [
        "//control/common",
        "//control/common/curl",
        "//control/context",
        "//control/docs",
        "//control/middlerware",
        "//control/params",
        "//control/service",
        "//sdk/go/common/service_router",
        "//sdk/go/laser_client",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_hashicorp_consul//api:go_default_library",
        "@com_github_swaggo_files//:go_default_library",
        "@com_github_swaggo_gin_swagger//:go_default_library",
    ],
)

exports_files(["router.go"])
