load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "server.go",
        "version.go",
    ],
    importpath = "laser-control/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//control/apis",
        "//control/common",
        "//control/context",
        "//control/logger",
        "//control/middlerware",
        "//control/service",
        "@com_github_gin_gonic_gin//:go_default_library",
        "@com_github_gin_gonic_gin//binding:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
