load("@io_bazel_rules_go//go:def.bzl", "go_library")

genrule(
    name = "gen_docs",
    srcs = [
        "//control/apis:router.go",
    ],
    outs = [
        "docs.go",
    ],
    cmd = "./$(location @com_github_swaggo_swag//cmd/swag) init -g $(location //control/apis:router.go) -o $(@D)",
    tools = ["@com_github_swaggo_swag//cmd/swag"],
)

go_library(
    name = "docs",
    srcs = [":gen_docs"],
    importpath = "laser-control/docs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_alecthomas_template//:go_default_library",
        "@com_github_swaggo_swag//:go_default_library",
    ],
)
