load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "laser-control/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_viper//:go_default_library",
        "@in_gopkg_natefinch_lumberjack_v2//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
