load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "ansible_config.go",
        "ansible_operation_manager.go",
        "base.go",
        "cluster.go",
        "cluster_running_metrics.go",
        "config_validator.go",
        "consul.go",
        "database.go",
        "dc.go",
        "group.go",
        "group_running_metrics.go",
        "keycheck.go",
        "machine.go",
        "machine_category.go",
        "metrics_info.go",
        "node_config.go",
        "node_manager.go",
        "node_physical_metrics.go",
        "node_running_metrics.go",
        "proxy_table_config.go",
        "reduce_metrics.go",
        "report_data_collector.go",
        "resource_pool_running_metrics.go",
        "service_manager.go",
        "shard_control_actors.go",
        "shard_manager.go",
        "shard_status.go",
        "system_index.go",
        "table.go",
        "table_config.go",
        "table_metrics.go",
        "table_shard_assigner.go",
        "ticket.go",
        "user.go",
    ],
    importpath = "laser-control/service",
    visibility = ["//visibility:public"],
    deps = [
        "//control/common",
        "//control/context",
        "//control/params",
        "//sdk/go/common/service_router",
        "//sdk/go/laser_client",
        "//sdk/go/laser_client/if:laser",
        "//sdk/go/laser_client/lib:laser_client_lib",
        "@com_github_apenella_go_ansible//:go_default_library",
        "@com_github_hashicorp_consul//api:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_robfig_cron_v3//:go_default_library",
        "@com_github_zentures_cityhash//:go_default_library",
        "@in_gopkg_ini_v1//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
