load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "curl",
    srcs = [
        "request.go",
        "response.go",
    ],
    importpath = "laser-control/common/curl",
    visibility = ["//visibility:public"],
)

go_test(
    name = "curl_test",
    srcs = ["request_test.go"],
    embed = [":curl"],
)
